# android-testing

./: .bazelrc  BUILD.bazel  Dockerfile  WORKSPACE  common_defs.bzl  dependencies.yaml  test.sh
ui/espresso/: BUILD.bazel  WORKSPACE  dependencies.yaml
ui/espresso/BasicSample/: BUILD.bazel
ui/espresso/BasicSample/app/src/androidTest/: AndroidManifest.xml  EmptyAndroidManifest.xml
ui/espresso/BasicSample/app/src/androidTest/java/com/example/android/testing/espresso/BasicSample/test/: ChangeTextBehaviorTest.java
ui/espresso/BasicSample/app/src/main/: BUILD.bazel  EmptyAndroidManifest.xml
ui/espresso/BasicSample/app/src/main/java/com/example/android/testing/espresso/BasicSample/: MainActivity.java
ui/espresso/CustomMatcherSample/: BUILD.bazel
ui/espresso/CustomMatcherSample/app/src/main/: BUILD.bazel
