load("@rules_jvm_external//:defs.bzl", "artifact")
load("//:common_defs.bzl", "androidxLibVersion", "coreVersion", "espressoVersion", "extJUnitVersion", "extTruthVersion", "rulesVersion", "runnerVersion")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "test_deps",
    visibility = ["//visibility:public"],
    exports = [
        artifact("androidx.annotation:annotation"),
        artifact("androidx.test.espresso:espresso-core"),
        artifact("androidx.test:rules"),
        artifact("androidx.test:runner"),
        artifact("androidx.test:monitor"),
        artifact("androidx.test.ext:junit"),
        artifact("androidx.test:core"),
        artifact("com.google.guava:guava"),
        artifact("com.google.inject:guice"),
        artifact("javax.inject:javax.inject"),
        artifact("junit:junit"),
        artifact("org.hamcrest:java-hamcrest"),
    ],
)

platform(
    name = "android_platform",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "@bazel_toolchains//constraints:xenial",
        "@bazel_tools//tools/cpp:clang",
    ],
    remote_execution_properties = """
      properties: {
        name: "container-image"
        value: "docker://gcr.io/di-cloud-exp/rbe-ubuntu16-04-android@sha256:4f4ad9bc6d49c8c1bbf39b94e5296398abd81e4b5bad06b81ab340328e6d10d5"
      }
      properties: {
        name: "dockerNetwork"
        value: "standard"
      }
      properties: {
        name: "dockerPrivileged"
        value: "true"
      }
    """,
)
