load("@rules_jvm_external//:defs.bzl", "artifact")
load("//:common_defs.bzl", "androidxLibVersion", "coreVersion", "espressoVersion", "extJUnitVersion", "extTruthVersion", "rulesVersion", "runnerVersion")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "test_deps",
    visibility = ["//visibility:public"],
    exports = [
        artifact("androidx.annotation:annotation"),
        artifact("androidx.test.espresso:espresso-core"),
        artifact("androidx.test:rules"),
        artifact("androidx.test:runner"),
        artifact("androidx.test:monitor"),
        artifact("androidx.test.ext:junit"),
        artifact("androidx.test:core"),
        artifact("com.google.guava:guava"),
        artifact("com.google.inject:guice"),
        artifact("javax.inject:javax.inject"),
        artifact("junit:junit"),
        artifact("org.hamcrest:java-hamcrest"),
    ],
)

platform(
    name = "android_platform",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "@bazel_toolchains//constraints:xenial",
        "@bazel_tools//tools/cpp:clang",
    ],
    remote_execution_properties = """
      properties: {
        name: "container-image"
        value: "docker://gcr.io/di-cloud-exp/rbe-ubuntu16-04-android@sha256:8511fb519f9c0c8307979450b0d8b0e5c972fead9c5718ddb788817a2e551173"
      }
      properties: {
        name: "dockerNetwork"
        value: "standard"
      }
      properties: {
        name: "dockerPrivileged"
        value: "true"
      }
    """,
    # TODO(@jin): switch to official rbe-containers when container with libxcursor1 and libxcomposite1 is ready.
    # remote_execution_properties = """
    #   properties: {
    #     name: "container-image"
    #     value: "docker://gcr.io/rbe-containers/ubuntu16_04-android_test@sha256:d3b597160b72cd39f4f0635f387d82afcaac4f2692daa4d64b895b7887b86fd6"
    #   }
    #   properties: {
    #     name: "dockerNetwork"
    #     value: "standard"
    #   }
    #   properties: {
    #     name: "dockerPrivileged"
    #     value: "true"
    #   }
    # """,
)
