android_library(
    name = "BasicSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample",
    manifest = "app/src/main/EmptyAndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "BasicSample",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample",
    manifest = "app/src/main/AndroidManifest.xml",
    deps = [
        ":BasicSampleLib",
        "@com_google_guava_guava//jar",
    ],
)

android_library(
    name = "BasicSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample.test",
    manifest = "app/src/androidTest/EmptyAndroidManifest.xml",
    deps = [
        ":BasicSampleLib",
	"@com_android_support_support_annotations//jar",
	"@com_google_inject_guice//jar",
	"@javax_inject_javax_inject//jar",
	"@junit_junit//jar",
	"@org_hamcrest_java_hamcrest//jar",
        "@com_android_support_test_espresso_espresso_core//aar",
        "@com_android_support_test_espresso_espresso_idling_resource//aar",
        "@com_android_support_test_rules//aar",
        "@com_android_support_test_runner//aar",
    ],
)

android_binary(
    name = "BasicSampleTest",
    custom_package = "com.example.android.testing.espresso.BasicSample.test",
    instruments = ":BasicSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":BasicSampleTestLib"],
)

# android_instrumentation_test(
#     name = "BasicSampleInstrumentationTest",
#     instrumentation = ":BasicSampleTest",
#     target_device = "@android_test_support//tools/android/emulated_devices/nexus_6:android_23_x86_qemu2",
#     # target_device = "@android_test_support//tools/android/emulated_devices/nexus_6:android_23_x86_qemu2",
#     # target_device = "@android_test_support//tools/android/emulated_devices/pixel:google_25_x86_qemu2",
#     test_args = {"--enable_display" : "", "--adb_server_port": "24014"},
# )
