android_binary(
  name = "CustomMatcherSample",
  srcs = glob(["app/src/main/**/*.java"]),
  manifest = "app/src/main/AndroidManifest.xml",
  resource_files = glob(["app/src/main/res/**/*"]),
  custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
  deps = [
    "//3rdparty/jvm/com/google/guava",
    "//3rdparty/jvm/com/android/support:support_annotations",
  ],
  visibility = ["//visibility:public"],
)
