android_binary(
    name = "BasicSample",
    srcs = glob(["**/*.java"]),
    manifest = "AndroidManifest.xml",
    custom_package = "com.example.android.testing.espresso.BasicSample",
    resource_files = glob(["res/**/*"]),
    deps = ["//3rdparty/jvm/com/google/guava"],
    visibility = ["//visibility:public"],
)
