android_binary(
  name = "CustomMatcherSample",
  srcs = glob(["**/*.java"]),
  manifest = "AndroidManifest.xml",
  resource_files = glob(["res/**/*"]),
  custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
  deps = [
    "//3rdparty/jvm/com/google/guava",
    "//3rdparty/jvm/com/android/support:support_annotations",
  ],
  visibility = ["//visibility:public"],
)
